Fix alignement of Toucan Huddle Speaker, decrease margin top from 46px to 36px

--- a/css/components/Main/Presentation/presentation.css
+++ b/css/components/Main/Presentation/presentation.css
@@ -119,6 +119,7 @@
 
   /* Toucan Speaker wrapper  */
   .presentation .toucan-huddle-speaker {
+    margin-top: 36px;
     order: -1;
     align-items: flex-start;
     position: relative;
